
Some database changes to finalise the incident tracking and "inc"
entries to categorydef to get started.

The Incidents has been moved from fetchStudent() to its own
fetchIncidents() function and Actions added to include the incident's
history.

To allow new actions to be added on to the end of an open Incident
then the js function clickToAction() has had a new action added and it
set no_db to -1 (similar to report entries) to flag the submit to the
action page as a new action.

Fixed bug with Add New Contact which was only affecting new contacts
created from student_view in the InfoBook but was setting gid=0 for
each new one.

Fixed the create_infobook.php install script so that the enrolstatus
has the full compliment of enum values - should have been done back in
0.8.13!



Version ClaSS-0.8.24 release (2007/08/17)
-----------------------------------------

Moved the path to phpmailer library out of the functions and into a
new $CFG option in school.php.  Use of phpmailer will soon be
obligatory for all emails and this is therefore now a dependency and
mentioned in the install README as such.

Added a multiline option for importing csv records split across
multiple lines - which is often the case with spreadsheet exports for
student records.

Slight changes to the guardian and student tables to lengthen the
forename and surname fields. The guardian title field is made an enum
and this replaces the prefix field (which was never implemented
anyway).

Added a new field senrole to the users table to allow any user to be
given acces to the seneeds tab (it is was restricted to role=sen
previously). This senrole field is checked in the logbook to add the
seneeds to the book array if needed. Also senrole can be set to yes or
no in the staff_details page by an admin user.

fetchStudent now includes a call to schoolarray to allow for localised
changes to fields.

A new field added to info table and included as part of the $Student