@@ -48,6 +48,7 @@ $string['checkall']='Check all';
 $string['tracking']='Tracking';
 $string['comments']='Comments';
 $string['incidents']='Incidents';
+$string['sanction']='Sanction';
 $string['name']='Name';
 $string['gender']='Gender';
 $string['dateofbirth']='Date of birth';
@@ -87,7 +88,6 @@ $string['limitbysubject']='Limit by subject';
 $string['coversheets']='Cover sheets';
 $string['reportonstudentsfrom']='Report on students from';
 $string['limittoonesubject']='Limit to one subject';
-$string['collatecommentssince']='Collate comments since';
 $string['publicationdateforprinting']='Publication date for printing';
 $string['assessment']='Assessment';
 $string['subjectclasses']='Subject classes';
@@ -273,6 +273,8 @@ $string['accomodation']='Accomodation';
 $string['academic']='Curriculum';
 $string['overall']='Overall';
 $string['weeks']='Weeks';
+$string['closed']='Closed';
+$string['open']='Open';
 $string['']='';
 $string['']='';
 ?>
