@@ -47,7 +47,7 @@ $string['contactphones']='Contact phones';
 $string['relationship']='Relationship';
 $string['otherrelative']='Other relative';
 $string['othercontact']='Other contact';
-$string['phonenumber']='Number';
+$string['phonenumber']='Telephone number';
 $string['phonetype']='Type';
 $string['homephone']='Home';
 $string['mobilephone']='Mobile';
@@ -81,10 +81,10 @@ $string['work']='Work';
 $string['holiday']='Holiday';
 $string['other']='Other';
 $string['firstcontactphone']='First contact phone';
-$string['firstcontact']='First Contact';
+$string['firstcontact']='First contact';
 $string['firstcontactemailaddress']='First contact email';
 $string['secondcontactphone']='Second contact phone';
-$string['secondcontact']='Second Contact';
+$string['secondcontact']='Second contact';
 $string['secondcontactemailaddress']='Second contact email';
 $string['source']='Source';
 $string['subjectspecificoptional']='Subject Specific (optional):';
@@ -93,6 +93,10 @@ $string['reason']='Reason';
 $string['english']='English';
 $string['believedtobeenglish']='Believed to be English';
 $string['incidentrecorded']='Incident recorded';
+$string['recordnewincident']='Record new incident';
+$string['editincident']='Edit incident';
+$string['newaction']='New action';
+$string['incidentstatus']='Incident status';
 $string['commentrecorded']='Comment recorded';
 $string['extrasupport']='Extra support';
 $string['exportstudentrecords']='Export student records';
